--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@
 # DB = mongodb+srv://hiten:hiten123@cluster0.08tajok.mongodb.net/test
 
 # production 
-# DB = mongodb+srv://shubham:3690@cluster0.bxwhlqu.mongodb.net/
+DB = mongodb+srv://shubham:3690@cluster0.bxwhlqu.mongodb.net/
 
 # DB = mongodb+srv://shubham:XF5Ur2jFhplS81wf@cluster0.n1gksd4.mongodb.net/
 
@@ -11,7 +11,7 @@
 # DB = mongodb+srv://shubham:Lq7HhuFstLyQxzv7@cluster0.9oz2qoy.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 
 
-DB = mongodb+srv://shubham:IfUWaAPZpAJxGAav@cluster0.zhxa4.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+# DB =  mongodb+srv://asitmandal492:N3c2r2y0fffRXHj8@cluster0.llbju8o.mongodb.net/
 
 SK = erhf34h84f83hfjfht49h348e23fgre92sfe322h2t3hf2
 
